# soccer-worldcup-tipping

./: .gitignore  docker-compose.yml
projects/backend/: .env.defaults  Cargo.toml
projects/backend/game/2026/: groups.json
projects/backend/src/: dirtybase_entry.rs  main.rs
projects/backend/src/dirtybase_entry/: event_handler.rs  http.rs  migration.rs  model.rs  seeder.rs
projects/backend/src/dirtybase_entry/http/: general.rs
projects/backend/src/dirtybase_entry/http/api/: v1.rs
projects/backend/src/dirtybase_entry/http/api/v1/: tip_strategy_controller.rs  user_controller.rs
projects/backend/src/dirtybase_entry/migration/: mig_1773373410_createapplicationtables.rs
projects/backend/src/dirtybase_entry/model/: chat_message.rs  chat_room.rs  chat_room_user.rs  country.rs  game.rs  tip.rs  tip_strategy.rs  user.rs
projects/backend/src/dirtybase_entry/seeder/: seed_app.rs
services/dotnet/: Dockerfile
services/elixir/: Dockerfile
services/phpfpm/: Dockerfile
services/rust/: Dockerfile
